# SalaryManagement

./: .env.example  .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: health.py
backend/app/api/v1/: employees.py  reports.py
backend/app/core/: config.py  logging.py
backend/app/db/: lifespan.py  session.py
backend/app/models/: __init__.py  country.py  currency.py  employee.py  fx_rate.py
backend/app/repositories/: base.py  country.py  currency.py  employee.py  fx_rate.py
backend/app/schemas/: common.py  employee.py  employee_filters.py  fx.py  import_result.py  reports.py
backend/app/services/: csv_export.py  csv_import.py  employee.py  exceptions.py  reporting.py
backend/migrations/: env.py
backend/migrations/versions/: a6a411539295_initial_schema.py
backend/seeds/: data.py  seed.py
backend/tests/: factories.py  test_api_employees.py  test_api_reports.py  test_db_session.py  test_main.py  test_migrations.py  test_models.py  test_repo_country.py  test_repo_currency.py  test_repo_employee.py  test_repo_fx_rate.py  test_schemas.py  test_seed.py  test_service_csv_export.py  test_service_csv_import.py  test_service_employee.py  test_service_reporting.py  test_smoke.py
docs/: ai-prompts.md  architecture.md  decisions.md  demo-script.md  deploy.md  design-notes.md  performance.md  requirements.md  tradeoffs.md
frontend/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
scripts/: no_float_for_money.sh  repo_smoke_test.sh
tests/: docs_smoke.sh  readme_smoke.sh
(+85 files in other folders)
