[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salary-management-backend"
version = "0.1.0"
description = "FastAPI backend scaffolding for the salary management system"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "sqlalchemy[asyncio]==2.0.36",
  "aiosqlite==0.20.0",
  "pydantic==2.10.0",
  "pydantic-settings==2.5.0",
  "email-validator==2.2.0",
  "alembic==1.13.0",
  "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.0",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "polyfactory==2.17.0",
  "faker==30.0.0",
  "ruff==0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
